--- a/skoda.html
+++ b/skoda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skoda Superb</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stilo.css">
 </head>
 <body>
     <main>
@@ -14,63 +14,32 @@
         <nav>
             <ul>
                 <li><a href="index.html">Kezdőlap</a></li>
-                <li><a href="models.html">Modellek</a></li>
             </ul>
         </nav>
         <article>
             <h2>Skoda Superb</h2>
+            <h4>Csomag</h4>
             <div class="kepek">
                 <img src="kepek/superb_white.webp" alt="Skoda Superb" />
             </div>
-            <p>A Skoda Superb egy prémium középkategóriás autó, amely a márka csúcsváltozata, és kényelmével, tágasságával, valamint fejlett technológiai megoldásaival kiemelkedik a piacon. Az autó elérhető szedán és kombi változatban is.</p>
-
-            <h3>Jellemzők:</h3>
-            <ul>
-                <li>Motor: 1.4 TSI, 2.0 TDI, 2.0 TSI motorváltozatok</li>
-                <li>Teljesítmény: 150-280 lóerő</li>
-                <li>Hajtás: Elsőkerék-hajtás / 4x4</li>
-                <li>Átlagfogyasztás: 4.0-7.0 liter/100 km</li>
-                <li>Biztonsági jellemzők: Frontális ütközéssegítő, automatikus vészfékezés, adaptív sebességtartó automatikus rendszer</li>
-            </ul>
-            <h3>Ár:</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Modell</th>
-                        <th>Ár (HUF)</th>
-                        <th>Motor</th>
-                        <th>Hajtás</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Skoda Superb Alap</td>
-                        <td>8.500.000 Ft</td>
-                        <td>1.4 TSI</td>
-                        <td>Elsőkerék-hajtás</td>
-                    </tr>
-                    <tr>
-                        <td>Skoda Superb Ambition</td>
-                        <td>9.500.000 Ft</td>
-                        <td>2.0 TDI</td>
-                        <td>4x4</td>
-                    </tr>
-                    <tr>
-                        <td>Skoda Superb Style</td>
-                        <td>11.000.000 Ft</td>
-                        <td>2.0 TSI</td>
-                        <td>4x4</td>
-                    </tr>
-                    <tr>
-                        <td>Skoda Superb Laurin & Klement</td>
-                        <td>12.500.000 Ft</td>
-                        <td>2.0 TDI</td>
-                        <td>4x4</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <p>További információkért kérjük, vegye fel velünk a kapcsolatot!</p>
+            <div class="adatok">
+                <h3>Hengerűrtartalom (cm3)</h3>
+                <h3>Max. motorteljesítmény/fordulat (kW/perc)</h3>
+                <h3>Max. forgatónyomaték/fordulat (Nm/perc)</h3>
+                <h3>Végsebesség</h3>
+                <h3>Gyorsulás</h3>
+                <h3>Meghajtás</h3>
+                <h3>Sebességváltó</h3>
+            </div>
+            <div class="masikadatok">
+                <p>4/1,498</p>
+                <p>110/5,000–6,000</p>
+                <p>250/1,500-3,500</p>
+                <p>225</p>
+                <p>9.2</p>
+                <p>Elsőkerék-meghajtás</p>
+                <p>Hétfokozatú automata, DSG</p>
+            </div>
         </article>
         <footer>
             <p>Dezső Vince & Tóth Barnabás & Nagy Dominik</p>
