--- a/urlap.html
+++ b/urlap.html
@@ -30,6 +30,19 @@
                     </div>
                 </fieldset>
                 <fieldset>
+                    <legend>Üzemanyag</legend>
+                    <div class="uzemanyag">
+                        <input type="radio" name="uzemanyag" id="benzin">
+                        <label for="elso">Benzin</label>
+                        <input type="radio" name="uzemanyag" id="dizel">
+                        <label for="masodik">Dízel</label>
+                        <input type="radio" name="uzemanyag" id="hibrid">
+                        <label for="harmadik">Hibrid</label>
+                        
+                    </div>
+                </fieldset>
+                <fieldset class="motor">
+                    
                     <legend>Motor</legend>
                     <p>Hengerűrtartalom:</p>
                     <div class="specifikacio">
