--- a/urlap.html
+++ b/urlap.html
@@ -31,15 +31,11 @@
                 </fieldset>
                 <fieldset>
                     <legend>Üzemanyag</legend>
-                    <div class="uzemanyag">
-                        <input type="radio" name="uzemanyag" id="benzin">
-                        <label for="elso">Benzin</label>
-                        <input type="radio" name="uzemanyag" id="dizel">
-                        <label for="masodik">Dízel</label>
-                        <input type="radio" name="uzemanyag" id="hibrid">
-                        <label for="harmadik">Hibrid</label>
-                        
-                    </div>
+                    <select name="teljesitmeny" id="teljesitmeny">
+                        <option value="benzin">Benzin</option>
+                        <option value="dizel">Dízel</option>
+                        <option value="hibrid">Hibrid</option>
+                    </select>
                 </fieldset>
                 <fieldset class="motor">
                     
@@ -125,7 +121,7 @@
             </form>
 
         </article>
-        <footer><h1>Nagy Dominik,Dezső Vincze,Tóth Barnabás</h1></footer>
+        <footer><h1>Nagy Dominik,Dezső Vince,Tóth Barnabás</h1></footer>
     </main>
 </body>
 </html>
