--- a/skoda.html
+++ b/skoda.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skoda Superb</title>
-    <link rel="stylesheet" href="stilo.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>Csoportmunka</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Webshop</h1>
+            <h1>Valami szöveg</h1>
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Kezdőlap</a></li>
+                <li><a href="skoda.html">Kezdőlap</a></li>
+                <li><a href="urlap.html">Feltöltés</a></li>
+                <li><a href="index.html">Modellek</a></li>
             </ul>
         </nav>
         <article>
@@ -42,7 +44,7 @@
             </div>
         </article>
         <footer>
-            <p>Dezső Vince & Tóth Barnabás & Nagy Dominik</p>
+            <p>&copy;Tóth Barnabás &copy;Dezső Vince &copy;Nagy Domminik</p>
         </footer>
     </main>
 </body>
