--- a/skoda.html
+++ b/skoda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skoda Superb</title>
-    <link rel="stylesheet" href="stilo.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -13,50 +13,48 @@
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Modellek</a></li>
+                <li><a href="index.html">Kezdőlap</a></li>
                 <li><a href="urlap.html">Űrlap</a></li>
+                <li><a href="index.html">Modellek</a></li>
             </ul>
         </nav>
-        <article>
-            <div class="ezaz">
-                <h2>Skoda Superb</h2>
-                <h4>1.5 TSI/110kW mHEV motor</h4>
-            </div>
-            <div class="kepek">
-                <img src="kepek/superb_white.webp" alt="Skoda Superb" />
-            </div>
-            <div class="keret">
-                <table>
-                    <tbody>
-                        <tr>
-                            <th>Hengerűrtartalom (cm3)</th>
-                            <td>4/1,498</td>
-                        </tr>
-                        <tr>
-                            <th>Végsebesség</th>
-                            <td>225</td>
-                        </tr>
-                        <tr>
-                            <th>Gyorsulás</th>
-                            <td>9.2</td>
-                        </tr>
-                        <tr>
-                            <th>Meghajtás típusa</th>
-                            <td>Elsőkerék-meghajtás</td>
-                        </tr>
-                        <tr>
-                            <th>Sebességváltó</th>
-                            <td>Hétfokozatú automata, DSG</td>
-                        </tr>
-                        <tr>
-                            <th>Motor-típusa</th>
-                            <td>Hibrid</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            
-        </article>
+        <div class="ezaz">
+            <h2>Skoda Superb</h2>
+            <h4>1.5 TSI/110kW mHEV motor</h4>
+        </div>
+        <div class="kepek">
+            <img src="kepek/superb_white.webp" alt="Skoda Superb" />
+        </div>
+        <div class="keret">
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Hengerűrtartalom (cm3)</th>
+                        <td>4/1,498</td>
+                    </tr>
+                    <tr>
+                        <th>Végsebesség</th>
+                        <td>225</td>
+                    </tr>
+                    <tr>
+                        <th>Gyorsulás</th>
+                        <td>9.2</td>
+                    </tr>
+                    <tr>
+                        <th>Meghajtás típusa</th>
+                        <td>Elsőkerék-meghajtás</td>
+                    </tr>
+                    <tr>
+                        <th>Sebességváltó</th>
+                        <td>Hétfokozatú automata, DSG</td>
+                    </tr>
+                    <tr>
+                        <th>Motor-típusa</th>
+                        <td>Hibrid</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <footer>
             <p>Tóth Barnabás & Nagy Dominik & Dezső Vince</p>
         </footer>
