--- a/urlap.html
+++ b/urlap.html
@@ -114,7 +114,7 @@
                 </fieldset>
                 
                 <div class="gomb">
-                    <button type="submit">Küld</button>
+                    <button type="submit" href="skoda.html">Küld</button>
                 </div>
                 
 
