--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,9 @@
         </header>
         <nav>
             <ul>
-                <li><a href="#">Kezdőlap</a></li>
-                <li><a href="#">Feltöltés</a></li>
-                <li><a href="#">Modellek</a></li>
+                <li><a href="index.html">Kezdőlap</a></li>
+                <li><a href="urlap.html">Űrlap</a></li>
+                <li><a href="skoda.html">Modellek</a></li>
             </ul>
         </nav>
         <article>
