--- a/skoda.html
+++ b/skoda.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            <h1>Valami szöveg</h1>
+            <img src="https://www.skoda.hu/skoda-logo.svg" alt="">
         </header>
         <nav>
             <ul>
