--- a/skoda.html
+++ b/skoda.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Csoportmunka</title>
+    <title>Skoda Superb - Demo Adatok</title>
 </head>
 <body>
     <main>
         <header>
-            <img src="https://www.skoda.hu/skoda-logo.svg" alt="">
+            <img src="https://www.skoda.hu/skoda-logo.svg" alt="Skoda Logo">
         </header>
         <nav>
             <ul>
@@ -23,21 +23,37 @@
             <h4>1.5 TSI/110kW mHEV motor</h4>
         </div>
         <div class="kepek">
-            <img src="kepek/superb_white.webp" alt="Skoda Superb" />
+            <img src="kepek/superb_white.webp" alt="Skoda Superb">
         </div>
         <div class="keret">
             <table>
                 <tbody>
                     <tr>
-                        <th>Hengerűrtartalom (cm3)</th>
+                        <th>Márka</th>
+                        <td>Skoda</td>
+                    </tr>
+                    <tr>
+                        <th>Modell</th>
+                        <td>Superb</td>
+                    </tr>
+                    <tr>
+                        <th>Évjárat</th>
+                        <td>2023</td>
+                    </tr>
+                    <tr>
+                        <th>Üzemanyag</th>
+                        <td>Benzin</td>
+                    </tr>
+                    <tr>
+                        <th>Hengerűrtartalom (cm³)</th>
                         <td>4/1,498</td>
                     </tr>
                     <tr>
-                        <th>Végsebesség</th>
+                        <th>Végsebesség (km/h)</th>
                         <td>225</td>
                     </tr>
                     <tr>
-                        <th>Gyorsulás</th>
+                        <th>Gyorsulás 0-100 km/h (s)</th>
                         <td>9.2</td>
                     </tr>
                     <tr>
@@ -45,18 +61,26 @@
                         <td>Elsőkerék-meghajtás</td>
                     </tr>
                     <tr>
-                        <th>Sebességváltó</th>
+                        <th>Sebességválto</th>
                         <td>Hétfokozatú automata, DSG</td>
                     </tr>
                     <tr>
-                        <th>Motor-típusa</th>
-                        <td>Hibrid</td>
+                        <th>Megengedett vontatóterhelés fék nélkül (max. kg)</th>
+                        <td>750</td>
+                    </tr>
+                    <tr>
+                        <th>Megengedett vontatóterhelés fékkel – 12% (max. kg)</th>
+                        <td>2,200</td>
+                    </tr>
+                    <tr>
+                        <th>Vélemény</th>
+                        <td>Nagyon kényelmes és gazdaságos autó, ideális hosszú utakra.</td>
                     </tr>
                 </tbody>
             </table>
         </div>
         <footer>
-            <p>&copy;Tóth Barnabás &copy;Dezső Vince &copy;Nagy Domminik</p>
+            <p>&copy; Tóth Barnabás &copy; Dezső Vince &copy; Nagy Dominik</p>
         </footer>
     </main>
 </body>
