--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="main.js"></script>
     <title>Csoportmunka</title>
-  </head>
-  <body>
+</head>
+<body>
     <main>
         <header>
             <img src="https://www.skoda.hu/skoda-logo.svg" alt="">
@@ -18,65 +19,12 @@
                 <li><a href="skoda.html">Modellek</a></li>
             </ul>
         </nav>
-        <article>
-            <div class="modellek">
-                <h3>Skoda Superb</h3>
-                <img src="kepek/superb_white.webp" alt="skoda superb">
-                <p>Ár: 9 450 000Ft</p>
-                <div class="gombok">
-                    <button>Konfigurálás</button>
-                    <button>Rendelés</button>
-                </div>
-            </div>
-            <div class="modellek">
-                <h3>Skoda Superb Combi</h3>
-                <img src="kepek/superbcombi_white.webp" alt="skoda superb combi">
-                <p>Ár: 10 250 000Ft</p>
-                <div class="gombok">
-                    <button>Konfigurálás</button>
-                    <button>Rendelés</button>
-                </div>
-            </div>
-            <div class="modellek">
-                <h3>Skoda Kodiaq</h3>
-                <img src="kepek/kodiaq_white.webp" alt="skoda kodiaq">
-                <p>Ár: 11 920 000Ft</p>
-                <div class="gombok">
-                    <button>Konfigurálás</button>
-                    <button>Rendelés</button>
-                </div>
-            </div>
-            <div class="modellek">
-                <h3>Skoda Octavia</h3>
-                <img src="kepek/octavia_white.webp" alt="skoda octavia">
-                <p>Ár: 9 990 000Ft</p>
-                <div class="gombok">
-                    <button>Konfigurálás</button>
-                    <button>Rendelés</button>
-                </div>
-            </div>
-            <div class="modellek">
-                <h3>Skoda Octavia Combi</h3>
-                <img src="kepek/octavia_white.webp" alt="skoda octavia combi">
-                <p>Ár: 9 150 000Ft</p>
-                <div class="gombok">
-                    <button>Konfigurálás</button>
-                    <button>Rendelés</button>
-                </div>
-            </div>
-            <div class="modellek">
-                <h3>Skoda Karoq</h3>
-                <img src="kepek/karoq_white.webp" alt="skoda karoq">
-                <p>Ár: 11 840 000Ft</p>
-                <div class="gombok">
-                    <button>Konfigurálás</button>
-                    <button>Rendelés</button>
-                </div>
-            </div>
+        <article id="art">
+           
         </article>
         <footer>
             <p>&copy;Tóth Barnabás &copy;Dezső Vince &copy;Nagy Domminik</p>
         </footer>
     </main>
-  </body>
+</body>
 </html>
